// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatefulTabs basic render with initial state: Stateful tabs render correctly with initial state 1`] = `
<Component
  initialState={
    Object {
      "activeKey": "1",
    }
  }
>
  <StatefulTabs
    disabled={false}
    initialState={
      Object {
        "activeKey": "1",
      }
    }
    onChange={[Function]}
    overrides={Object {}}
    stateReducer={[Function]}
  >
    <Tabs
      activeKey="1"
      disabled={false}
      onChange={[Function]}
      orientation="horizontal"
      overrides={Object {}}
    >
      <MockStyledComponent
        $disabled={false}
        $orientation="horizontal"
        data-baseweb="tabs"
      >
        <div
          data-baseweb="tabs"
          styled-component="true"
        >
          <MockStyledComponent
            $disabled={false}
            $orientation="horizontal"
            role="tablist"
          >
            <div
              role="tablist"
              styled-component="true"
            >
              <TabComponent
                $orientation="horizontal"
                active={false}
                disabled={false}
                expanded={false}
                id="0"
                key="0/.0"
                onClick={[Function]}
                onKeyDown={[Function]}
                onSelect={[Function]}
                title=""
              >
                <MockStyledComponent
                  $active={false}
                  $disabled={false}
                  $orientation="horizontal"
                  aria-disabled={null}
                  aria-selected={false}
                  id="0"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={0}
                >
                  <div
                    aria-disabled={null}
                    aria-selected={false}
                    id="0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    styled-component="true"
                    tabIndex={0}
                  >
                    Tab Link 1
                  </div>
                </MockStyledComponent>
              </TabComponent>
              <TabComponent
                $orientation="horizontal"
                active={true}
                disabled={false}
                expanded={false}
                id="1"
                key="1/.1"
                onClick={[Function]}
                onKeyDown={[Function]}
                onSelect={[Function]}
                title=""
              >
                <MockStyledComponent
                  $active={true}
                  $disabled={false}
                  $orientation="horizontal"
                  aria-disabled={null}
                  aria-selected={true}
                  id="1"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={0}
                >
                  <div
                    aria-disabled={null}
                    aria-selected={true}
                    id="1"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    styled-component="true"
                    tabIndex={0}
                  >
                    Tab Link 2
                  </div>
                </MockStyledComponent>
              </TabComponent>
              <TabComponent
                $orientation="horizontal"
                active={false}
                disabled={false}
                expanded={false}
                id="2"
                key="2/.2"
                onClick={[Function]}
                onKeyDown={[Function]}
                onSelect={[Function]}
                title=""
              >
                <MockStyledComponent
                  $active={false}
                  $disabled={false}
                  $orientation="horizontal"
                  aria-disabled={null}
                  aria-selected={false}
                  id="2"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={0}
                >
                  <div
                    aria-disabled={null}
                    aria-selected={false}
                    id="2"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    styled-component="true"
                    tabIndex={0}
                  >
                    Tab Link 3
                  </div>
                </MockStyledComponent>
              </TabComponent>
            </div>
          </MockStyledComponent>
          <MockStyledComponent
            $active={false}
            $disabled={false}
            $orientation="horizontal"
            aria-labelledby="0"
            key="0/.0"
            role="tabpanel"
          >
            <div
              aria-labelledby="0"
              role="tabpanel"
              styled-component="true"
            />
          </MockStyledComponent>
          <MockStyledComponent
            $active={true}
            $disabled={false}
            $orientation="horizontal"
            aria-labelledby="1"
            key="1/.1"
            role="tabpanel"
          >
            <div
              aria-labelledby="1"
              role="tabpanel"
              styled-component="true"
            >
              Tab 2 content
            </div>
          </MockStyledComponent>
          <MockStyledComponent
            $active={false}
            $disabled={false}
            $orientation="horizontal"
            aria-labelledby="2"
            key="2/.2"
            role="tabpanel"
          >
            <div
              aria-labelledby="2"
              role="tabpanel"
              styled-component="true"
            />
          </MockStyledComponent>
        </div>
      </MockStyledComponent>
    </Tabs>
  </StatefulTabs>
</Component>
`;

exports[`StatefulTabs basic render: Stateful tabs render correctly 1`] = `
<Component>
  <StatefulTabs
    disabled={false}
    onChange={[Function]}
    overrides={Object {}}
    stateReducer={[Function]}
  >
    <Tabs
      activeKey="0"
      disabled={false}
      onChange={[Function]}
      orientation="horizontal"
      overrides={Object {}}
    >
      <MockStyledComponent
        $disabled={false}
        $orientation="horizontal"
        data-baseweb="tabs"
      >
        <div
          data-baseweb="tabs"
          styled-component="true"
        >
          <MockStyledComponent
            $disabled={false}
            $orientation="horizontal"
            role="tablist"
          >
            <div
              role="tablist"
              styled-component="true"
            >
              <TabComponent
                $orientation="horizontal"
                active={true}
                disabled={false}
                expanded={false}
                id="0"
                key="0/.0"
                onClick={[Function]}
                onKeyDown={[Function]}
                onSelect={[Function]}
                title=""
              >
                <MockStyledComponent
                  $active={true}
                  $disabled={false}
                  $orientation="horizontal"
                  aria-disabled={null}
                  aria-selected={true}
                  id="0"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={0}
                >
                  <div
                    aria-disabled={null}
                    aria-selected={true}
                    id="0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    styled-component="true"
                    tabIndex={0}
                  >
                    Tab Link 1
                  </div>
                </MockStyledComponent>
              </TabComponent>
              <TabComponent
                $orientation="horizontal"
                active={false}
                disabled={false}
                expanded={false}
                id="1"
                key="1/.1"
                onClick={[Function]}
                onKeyDown={[Function]}
                onSelect={[Function]}
                title=""
              >
                <MockStyledComponent
                  $active={false}
                  $disabled={false}
                  $orientation="horizontal"
                  aria-disabled={null}
                  aria-selected={false}
                  id="1"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={0}
                >
                  <div
                    aria-disabled={null}
                    aria-selected={false}
                    id="1"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    styled-component="true"
                    tabIndex={0}
                  >
                    Tab Link 2
                  </div>
                </MockStyledComponent>
              </TabComponent>
              <TabComponent
                $orientation="horizontal"
                active={false}
                disabled={false}
                expanded={false}
                id="2"
                key="2/.2"
                onClick={[Function]}
                onKeyDown={[Function]}
                onSelect={[Function]}
                title=""
              >
                <MockStyledComponent
                  $active={false}
                  $disabled={false}
                  $orientation="horizontal"
                  aria-disabled={null}
                  aria-selected={false}
                  id="2"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={0}
                >
                  <div
                    aria-disabled={null}
                    aria-selected={false}
                    id="2"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    styled-component="true"
                    tabIndex={0}
                  >
                    Tab Link 3
                  </div>
                </MockStyledComponent>
              </TabComponent>
            </div>
          </MockStyledComponent>
          <MockStyledComponent
            $active={true}
            $disabled={false}
            $orientation="horizontal"
            aria-labelledby="0"
            key="0/.0"
            role="tabpanel"
          >
            <div
              aria-labelledby="0"
              role="tabpanel"
              styled-component="true"
            >
              Tab 1 content
            </div>
          </MockStyledComponent>
          <MockStyledComponent
            $active={false}
            $disabled={false}
            $orientation="horizontal"
            aria-labelledby="1"
            key="1/.1"
            role="tabpanel"
          >
            <div
              aria-labelledby="1"
              role="tabpanel"
              styled-component="true"
            />
          </MockStyledComponent>
          <MockStyledComponent
            $active={false}
            $disabled={false}
            $orientation="horizontal"
            aria-labelledby="2"
            key="2/.2"
            role="tabpanel"
          >
            <div
              aria-labelledby="2"
              role="tabpanel"
              styled-component="true"
            />
          </MockStyledComponent>
        </div>
      </MockStyledComponent>
    </Tabs>
  </StatefulTabs>
</Component>
`;
